# dispatcher

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci-repos-humble.vcs  .gitlab-ci-repos-jazzy.vcs  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  package.xml
.github/actions/setup-and-build/: action.yml
.github/workflows/: ci.yml  version-bump.yml
config/: example.yaml  example_category.yaml  example_configurations.yaml  example_no_configurations.yaml  example_remote_session.yaml  example_scripts.yaml  example_scripts_category.yaml  example_shell.yaml  example_variables.yaml
doc/: dispatcher_qwidget_hierarchy.md
icons/: README.md  icons.qrc
include/dispatcher/: dispatcher_node.h  dispatcher_widget.h  item.h  process_item.h  ros_process_item.h  script_item.h  shell_process_item.h  variable.h
include/dispatcher/detail/: logic.h
src/: dispatch_item.cc  dispatch_item.h  dispatcher.cc  dispatcher_item.cc  dispatcher_item.h  dispatcher_node.cc  dispatcher_node.h  dispatcher_widget.cc  dispatcher_widget.h  item.cc  logic.cc  process_item.cc  process_item.h  ros_process_item.cc  ros_process_item.h  script_item.cc  script_item.h  shell_process_item.cc  shell_process_item.h  variable.cc
test/: dispatcher_logic_test.cpp  dispatcher_status_test.cpp
