<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dispatcher</name>
  <version>0.2.0</version>
  <description>ROS2 dispatcher for node lifecycle management</description>
  <maintainer email="kwehage@jpl.nasa.gov">dev</maintainer>
  <license>JPL / Caltech</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>yaml-cpp</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-opengl-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
